# ElectricityDemandForecasterNL

./: .gitignore  README.md  dockerfile  dockerignore  requirements.txt
api/: main.py
data/sample/: time_series_sample.sqlite
electricitydemandforecaster/: README.md  pyproject.toml
electricitydemandforecaster/configs/: base_lstm_minimal.yaml  base_lstm_optimization.yaml  cnnlstm_minimal.yaml  cnnlstm_optimization copy.yaml  cnnlstm_optimization.yaml  cnnlstm_optimized.yaml
electricitydemandforecaster/src/edf/: datasets.py  evaluate.py  features.py  inout.py  metrics.py  models.py  train.py  train_cli.py
models/2025-08-23_13-32-41/: config.yaml  final_training_scores.json  split_info.json
models/2025-09-04_19-52-23/: split_info.json
models/2025-09-04_19-52-23_op/: final_training_scores.json
models/2025-09-05_07-07-46/: config.yaml  final_training_scores.json  test_metrics.json
notebooks/: 0_eda.ipynb  1_training_and_eval.ipynb
