[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electricityforecaster"
version = "0.1.0"
requires-python = ">=3.10"
authors = [
  { name="Moritz C. Schmidt", email="moritzsch12395@gmail.com" }
]
dependencies = [
  "numpy", 
  "pandas", 
  "torch", 
  "scikit-learn==1.6.1", 
  "matplotlib", 
  "pyyaml", 
  "joblib", 
  "ipykernel", 
  "tqdm", 
  "xgboost", 
  "ipywidgets", 
  "optuna"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]